keycloak/keycloak-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: iam-thesis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
#      initContainers:
#        - name: copy-config
#          image: busybox
#          command: ['sh', '-c', 'cp /opt/jboss/standalone-ha.xml /opt/jboss/keycloak/standalone/configuration/standalone-ha.xml']
#          volumeMounts:
#            - name: standalone-ha-config
#              mountPath: /opt/jboss/standalone-ha.xml
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:15.0.2
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          lifecycle:
            preStop:
              exec:
                command: ["sh", "-c", "sleep 1"]
          volumeMounts:
            - name: infinispan-config
              mountPath: /opt/jboss/infinispan-config.xml
              subPath: infinispan-config.xml
            - name: hotrod-client-config
              mountPath: /opt/jboss/keycloak/standalone/configuration/hotrod-client.properties
              subPath: hotrod-client.properties
            - name: standalone-ha-config
              mountPath: /opt/jboss/standalone-ha.xml
              subPath: standalone-ha.xml
          resources:
            requests:
              memory: "1Gi"
              cpu: "500m"
            limits:
              memory: "2Gi"
              cpu: "1"
      volumes:
        - name: infinispan-config
          configMap:
            name: keycloak-infinispan-config
        - name: hotrod-client-config
          configMap:
            name: hotrod-client-config
        - name: standalone-ha-config
          configMap:
            name: standalone-ha-config
      terminationGracePeriodSeconds: 60
