keycloak/keycloak-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: iam-thesis
  labels:
    app: keycloak
spec:
  selector:
    app: keycloak
  type: LoadBalancer
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: keycloak
  sessionAffinity: ClientIP
